# Remote-UART-Bridge

./: .gitignore  CMakeLists.txt  README.md  esp32c3_partition_table.csv  esp32s3_partition_table.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3
components/auto-download/: CMakeLists.txt  auto_download.c
components/espnow-manager/: CMakeLists.txt  espnow_manager.c
components/espstate-monitor/: CMakeLists.txt  espstate_monitor.c
components/lwpkt/: CMakeLists.txt  lwpkt.c  lwrb.c
components/memory-display/: CMakeLists.txt  memory_display.c
components/message-manager/: CMakeLists.txt  message_manager.c  message_manager_mode.h
components/message-manager/handler/: add_peer_device.c  message_manager_handler.h  scan.c  scan_response.c  uart_to_usb.c  usb_line_coding_changed.c  usb_line_state_changed.c  usb_to_uart.c
components/message-manager/include/: message_manager.h
components/message-manager/service/: get_scan_result.c  scan.c  send_data_to_uart.c  send_data_to_usb.c  send_usb_line_code_change_to_uart.c  send_usb_line_state_change_to_uart.c
components/nvs-store/: CMakeLists.txt  nvs_store.c
components/nvs_manager/: CMakeLists.txt  nvs_manager.c
components/usb-bridge/: CMakeLists.txt  usb_bridge.c
components/usb-bridge/include/: usb_bridge.h
components/usb-bridge/tools/: usb_bridge_tools.c  usb_bridge_tools.h
components/web/: CMakeLists.txt  web.c  web_mode.h
components/web/handler/: api_espnow_peer_add.c  api_espnow_peer_delete.c  api_espnow_peer_disable.c  api_espnow_peer_enable.c  api_espnow_peers.c  api_espnow_scan.c  api_ota_upload.c  api_system_label.c  api_system_status.c  espnow_page_handler.c  monitor_page_handler.c  page_handler.c  peer_add_handler.c  peer_del_handler.c  peers_handler.c  scan_handler.c  status_handler.c  web_handler.h
components/web/html/: espnow_html.html  monitor_html.html  web_html.html
components/web/include/: web.h
components/web/tools/: http_json.c  mac_to_str.c  read_body.c  web_to_str.c  web_tools.h
main/: CMakeLists.txt  Kconfig.projbuild  Remote-UART-Bridge.c  idf_component.yml
(+15 files in other folders)
